# jead_playground

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
backend/: CMakeLists.txt
backend/inc/: curlcppdownloader.hpp  dataimporter.hpp  dependencyprovider.hpp  downloader.hpp  hungarianuserfondler.hpp  jsondataimporter.hpp  user.hpp  userfondler.hpp
backend/model/inc/: user.hpp
backend/model/src/: user.cpp
backend/repository/inc/: baserepository.hpp  baserepositoryimpl.cpp  baserepositoryimpl.hpp
backend/src/: curlcppdownloader.cpp  dependencyprovider.cpp  hungarianuserfondler.cpp  jsondataimporter.cpp  user.cpp
backend/test/: fondleTest.cpp
frontend/: CMakeLists.txt
frontend/src/: main.cpp
